# advent_of_code_2024

./: README.md  activate_environment.txt  inside_calc_next_step.prof  inside_collect_loop.prof  inside_is_loop.prof  inside_stream_guard.prof  list2d_is_loop.prof  pyproject.toml  temp_list2d_new_next_step.prof
advent/advent_of_code_2024/day01/: main.py
advent/advent_of_code_2024/day02/: main.py
advent/advent_of_code_2024/day03/: main.py  prompt.txt
advent/advent_of_code_2024/day04/: main.py  prompt.txt
advent/advent_of_code_2024/day05/: data_01.txt  main.py  prompt.txt
advent/advent_of_code_2024/day06/: main.py  prompt.txt
advent/advent_of_code_2024/day07/: main.py  prompt.txt
advent/advent_of_code_2024/day08/: main.py  prompt.txt
advent/advent_of_code_2024/day09/: main.py  prompt.txt
advent/advent_of_code_2024/day10/: main.py  prompt.txt
advent/common/: concurrent_funcs.py  data_stream.py  extended_itertools.py  import_data.py  vectors.py
day01/: distance_finder.py
days/day01/: distance_finder.py
days_twenty_four/common/: import_data.py
days_twenty_four/day01/: main.py
days_twenty_four/day02/: main.py
tests/advent_of_code_2024/day01/: test_main01.py
tests/advent_of_code_2024/day02/: test_main02.py
tests/advent_of_code_2024/day03/: test_main03.py
tests/advent_of_code_2024/day04/: data_exes_00.txt  test_main04.py
tests/advent_of_code_2024/day05/: test_main05.py
tests/common/: test_extended_itertools.py  test_vectors.py
tests/day01/: test_main.py  test_main01.py
tests/day02/: test_main.py
(+5 files in other folders)
